# pi-rn

./: .gitignore  AGENTS.md  LICENSE  README.md
_imports/: pi-agent-chart-tools-spec.md  (+4 more)
pi-monitor/: Cargo.toml  README.md
pi-monitor/crates/monitor-app/: Cargo.toml
pi-monitor/crates/monitor-app/src/: main.rs
pi-monitor/crates/monitor-cli/: Cargo.toml
pi-monitor/crates/monitor-cli/src/: main.rs
pi-monitor/crates/monitor-core/: Cargo.toml
pi-monitor/crates/monitor-core/src/: lib.rs
pi-monitor/crates/monitor-ingest/: Cargo.toml
pi-monitor/crates/monitor-ingest/src/: lib.rs
pi-monitor/crates/monitor-ui/: Cargo.toml
pi-monitor/crates/monitor-ui/src/: lib.rs
pi-monitor/crates/pulse-public-frame/: Cargo.toml
pi-monitor/crates/pulse-public-frame/src/: lib.rs
pi-monitor/docs/: ADR-0001-rust-native-pi-monitor.md  ADR-0002-current-json-monitor-extension.md
pi-monitor/fixtures/: alarming-target.json  asystole.json  changed-current.json  invalid-nan.json  legacy-monitor-waveforms-next.json  legacy-monitor-waveforms.json  malformed-monitor-extension.json  missing-fields.json  paused.json  stable-current.json  waveform-abp.json
pi-monitor/fixtures/public-contract/: .lanes.json  README.md
pi-monitor/fixtures/public-contract/available-waveform/: current.json  events.jsonl  status.json  timeline.json  timeline.jsonl
pi-monitor/fixtures/public-contract/provider-unavailable/: current.json  events.jsonl  timeline.json  timeline.jsonl
pi-monitor/fixtures/public-contract/scripted-alarm/: events.jsonl  status.json  timeline.jsonl
pi-monitor/fixtures/public-contract/scripted-demo/: current.json  timeline.jsonl
pi-monitor/fixtures/public-contract/stale-waveform/: events.jsonl  timeline.json
(+524 files in other folders)
