[workspace]
members = [
  "crates/pulse-public-frame",
  "crates/monitor-core",
  "crates/monitor-ingest",
  "crates/monitor-ui",
  "crates/monitor-cli",
  "crates/monitor-app",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"
eframe = { version = "0.34.1", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
