[package]
name = "monitor-ingest"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
pulse-public-frame = { path = "../pulse-public-frame" }
anyhow.workspace = true
serde_json.workspace = true
notify = "8.2"

[dev-dependencies]
tempfile.workspace = true
